# cli-testing-specialist

./: .gitignore  .gitlab-ci.yml  .publish-state.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  TODO.md  cli-test  deny.toml  mutants.toml  tasks.yml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/actions/cli-testing-specialist/: action.yml
.github/workflows/: ci.yml  cli-test.yml  mutation-testing.yml  test-and-publish.yml
benches/: benchmark.rs  io_benchmark.rs
config/: default.yaml  enum-definitions.yaml  numeric-constraints.yaml  option-patterns.yaml  schema.yaml
core/: baseline-manager.sh  cli-analyzer.sh  config-loader.sh  coverage-analyzer.sh  coverage-reporter.sh  coverage-tracker.sh  docker-test-runner.sh  metrics-collector.sh  option-analyzer.sh  profiler.sh  report-generator-html.sh  run-tests.sh  security-reporter.sh  security-scanner.sh  shell-detector.sh  test-generator.sh  validator.sh
docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.ubuntu  docker-compose.yml
docs/: COVERAGE-DESIGN.md  DIRECTORY-TRAVERSAL-LIMITS-DESIGN.md  I18N-IMPLEMENTATION-PLAN.md  INPUT-VALIDATION-GUIDE.md  INPUT-VALIDATION-PLAN-v2.md  INPUT-VALIDATION-PLAN.md  ITERATIVE-REVIEW-RESULTS.md  PERFORMANCE.md  PERFORMANCE_REPORT.md  PHASE2-PLAN.md  PHASE25-FINAL-REPORT.en.md  PHASE25-FINAL-REPORT.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  QA-MANUAL-TEST-CHECKLIST.md  RELEASING.md  REPORT-FORMATS.md  RUST_V1_DESIGN.md  TARGET-TOOLS.md  TOOL_SPECIFIC_CONFIG.md  USAGE.md  V1.1.0-DESIGN.md  V1.1.0-IMPLEMENTATION-PLAN.md
examples/: backup-suite-implementation.md  backup-suite.cli-test-config.yml
i18n/: README.md  en.sh  ja.sh
sample-reports/: test-report.json  test-report.md
sample-tests/: demo.bats
scripts/: install-hooks.sh  profile-memory.sh
scripts/git-hooks/: pre-commit
src/: error.rs  lib.rs  main.rs
src/analyzer/: behavior_inferrer.rs  cli_parser.rs  mod.rs  option_inferrer.rs  subcommand_detector.rs
src/cli/: commands.rs  mod.rs
src/config/: loader.rs  mod.rs  validator.rs
src/generator/: assert_cmd_generator.rs  bats_writer.rs  mod.rs  templates.rs  test_generator.rs  test_generator_trait.rs  test_level_parallel.rs
src/reporter/: html.rs  json.rs  junit.rs  markdown.rs  mod.rs
src/runner/: bats_executor.rs  mod.rs
src/templates/assert_cmd/: basic.hbs  destructive_ops.hbs  help.hbs  input_validation.hbs  multi_shell.hbs  path.hbs  performance.hbs  security.hbs
src/types/: analysis.rs  config.rs  mod.rs  no_args_behavior.rs  report.rs  test_case.rs  test_priority.rs
src/utils/: io_optimized.rs  mod.rs  parallel.rs  resource_limits.rs  safe_deserialize.rs  validator.rs
templates/: bats-test.template  concurrency-test.fragment  destructive-ops.fragment  directory-traversal-limits.fragment  input-validation.fragment  performance-test.fragment  subcommand-help.fragment
test-data/: curl-analysis.json  git-analysis.json  ls-analysis.json  npm-analysis.json  python-analysis.json  sample-cli-analysis.json
tests/: analyzer_integration_test.rs  integration_test_results.md  memory_test.rs
tests/e2e/: comprehensive-test.sh
tests/integration/: test-full-workflow.bats
tests/unit/: test-logger.bats  test-validator.bats
utils/: i18n-loader.sh  logger.sh
