[package]
name = "cli-testing-specialist"
version = "1.0.9"
authors = ["Sanae Abe <sanae.a.sunny@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Comprehensive testing framework for CLI tools - automated analysis, test generation, and security validation"
repository = "https://github.com/sanae-abe/cli-testing-specialist"
keywords = ["cli", "testing", "security", "automation", "bats"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex
regex = "1.10"
lazy_static = "1.4"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Terminal colors
colored = "3.0"

# Progress indicators
indicatif = "0.18"

# System information
hostname = "0.4"
num_cpus = "1.16"

# Process timeout
wait-timeout = "0.2"

# Template engine (for assert_cmd code generation)
handlebars = "5.1"

# Unix system calls (for resource limits)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows system calls (for Job Objects)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
# Integration testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# Property-based testing
proptest = "1.4"

# Benchmarking
criterion = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bench]]
name = "benchmark"
harness = false
